test/typechecker.d/invalid/params0.surc.bad
b: Bool = true

; b already declared
f(b: Bool): Bool = b
